# mini-renderer

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cc
src/canvas/: canvas.cc  canvas.h
src/lib/tga/: CMakeLists.txt  tga_image.cc  tga_image.h
src/model/: model.cc  model.h
src/shader/: shader.cc  shader.h
src/util/: CMakeLists.txt  geo.cc  geo.h  geo_util.h  geometry.cc  geometry.h  matrix.cc  matrix.h  string.h  transform.cc  transform.h  triangle_util.h  util.h  util.hpp
